update Swagger to point at the Heroku host
